# HW_31_Django

./: README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  requirements.txt
HW27_Django/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  permissions.py  serializers.py
ads/migrations/: 0001_initial.py  0002_rename_author_id_ad_author_and_more.py
ads/urls/: ad.py  cat.py  selections.py
ads/views/: ad.py  cat.py
data/: csv_to_json.py  locations.json  user&location_convert.py  users.json
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selection/: selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_location_and_more.py
